[package]
name = "async-walkdir"
version = "2.0.0"
authors = ["Ririsoft <riri@ririsoft.com>"]
edition = "2021"
description = "Asynchronous directory traversal for Rust."
license = "Apache-2.0"
keywords = ["async", "walk", "directory", "recursive", "stream"]
categories = ["asynchronous", "filesystem"]
homepage = "https://github.com/ririsoft/async-walkdir"
repository = "https://github.com/ririsoft/async-walkdir"
documentation = "https://docs.rs/async-walkdir/"
exclude = [ "/.github/*" ]
readme = "README.md"

[dependencies]
futures-lite = "2.1.0"
async-fs = "2.1.0"
thiserror = "1.0.58"

[dev-dependencies]
tempfile = "3.9.0"
